Signup using Facebook

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,4 +9,9 @@
 
   <%= render 'form' %>
 
+  <div>
+    <%= link_to(t('.signup_with_twitter'), '/auth/twitter') %>
+    <%= link_to(t('.signup_with_facebook'), '/auth/facebook') %>
+  </div>
+
 <% end -%>
