--- a/app/assets/stylesheets/helpers/_white-spacing.scss
+++ b/app/assets/stylesheets/helpers/_white-spacing.scss
@@ -68,6 +68,8 @@ In some point should be good to base these var in relative font sizes (rem).
 .mxn4 { margin-left: -30px; margin-right: -30px; }
 
 .mx-auto { margin-left: auto; margin-right: auto; }
+.ml-auto { margin-left: auto;}
+.mr-auto { margin-right: auto;}
 
 .p0  { padding:       0; }
 .pl0 { padding-left:  0; }
@@ -108,4 +110,6 @@ In some point should be good to base these var in relative font sizes (rem).
 .pb4 { padding-bottom:30px; }
 .py4 { padding-top:   30px; padding-bottom: 30px; }
 .px4 { padding-left:  30px; padding-right:  30px; }
+
+
 
