--- a/app/views/shared/_user_links.html.erb
+++ b/app/views/shared/_user_links.html.erb
@@ -4,6 +4,8 @@
   <li><%= link_to t('users.invite'), invite_path %></li>
   <li><%= link_to t('.log_out'), logout_path, method: "delete" %></li>
 <% else %>
-  <li><%= link_to t('.track_your_first_donation'), signup_path %></li>
-  <li><%= link_to t('.login'), login_path %></li>
+  <!-- <li><%= link_to t('.track_your_first_donation'), signup_path, :class => 'cd-signup' %></li>
+  <li><%= link_to t('.login'), login_path, :class => 'cd-signin' %></li> -->
+  <li class="cd-signup"><%= link_to t('.track_your_first_donation'), '#0', :class => 'cd-signup' %></li>
+  <li class="cd-signin"><%= link_to t('.login'), '#0', :class => 'cd-signin' %></li>
 <% end %>
