--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -20,7 +20,7 @@
                 </div>
               <% end %>          
             </div>
-            <!-- <h2><%= t('.edit_your_donation', name: @project.name) %></h2> -->
+            <!-- <h2><%# t('.edit_your_donation', name: @project.name) %></h2> -->
 
           <div class="form-group justify-item">
             <div class="form-label uppercase">
