--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -157,7 +157,8 @@ body .tipsy { font-size: 11px; }
 }
 
 #main_content { margin-top: 40px; margin-bottom: 80px; }
-.content_column, .alert { padding: 0 40px 0 120px; overflow: hidden; }
+.content_column { padding: 0 40px 0 120px; overflow: hidden; }
+.alert { overflow: hidden; }
 .content_full {  }
 
 /* forms */
