--- a/app/assets/stylesheets/objects/_form-fields.scss
+++ b/app/assets/stylesheets/objects/_form-fields.scss
@@ -22,7 +22,7 @@
     box-shadow: 0 0 2px $main_color;
   }
 
-  &:disabled {
+  &:disabled, .is-disabled {
     cursor: not-allowed;
     opacity: 0.8;
   }
