--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(donation_for_form) do |f| %>
+<%= form_for(donation_for_form, url: (@project ? project_donations_path : donations_path)) do |f| %>
 
   <div class="bb-donations" data-projects="<%= projects_path %>">
     <div class="js-donations mb1">
@@ -18,9 +18,8 @@
                     <%= project_form.text_field :name, :class => "hundred percent field-text", :disabled => true %>
                   <% end %>
                 </div>
-              <% end %>          
+              <% end %>
             </div>
-            <!-- <h2><%# t('.edit_your_donation', name: @project.name) %></h2> -->
 
           <div class="form-group justify-item">
             <div class="form-label uppercase">
@@ -42,18 +41,18 @@
             </div>
             <div class="form-fields">
               <div class="field-select field-group-item">
-                <select class="js-donation-reurring" name="donation[recurring]">
+                <select class="js-donation-reurring" name="donation[recurring]" value="<%= f.object.recurring %>>
                   <option value="no" selected="selected">No</option>
-                  <option value="daily">Daily</option>
-                  <option value="weekly">Weekly</option>
-                  <option value="2 weeks">2 Weeks</option>
-                  <option value="3 weeks">3 Weeks</option>
-                  <option value="monthly">Monthly</option>
-                  <option value="2 months">2 Months</option>
-                  <option value="3 months">3 Months</option>
-                  <option value="4 months">4 Months</option>
-                  <option value="6 months">6 Months</option>
-                  <option value="12 months">12 Months</option>
+                  <option value="daily"><%= t('.daily') %></option>
+                  <option value="weekly"><%= t('.weekly') %></option>
+                  <option value="2 weeks"><%= t('.weeks', n: 2) %></option>
+                  <option value="3 weeks"><%= t('.weeks', n: 3) %></option>
+                  <option value="monthly"><%= t('.monthly') %></option>
+                  <option value="2 months"><%= t('.months', n: 2) %></option>
+                  <option value="3 months"><%= t('.months', n: 3) %></option>
+                  <option value="4 months"><%= t('.months', n: 4) %></option>
+                  <option value="6 months"><%= t('.months', n: 6) %></option>
+                  <option value="12 months"><%= t('.months', n: 12) %></option>
                 </select>
               </div>
             </div>
@@ -61,7 +60,7 @@
 
           <div class="form-group justify-item">
             <div class="form-label uppercase">
-              <%= f.label(:date, t('donation.date'), :class => 'js-donation-date') %> 
+              <%= f.label(:date, t('donation.date'), :class => 'js-donation-date') %>
             </div>
             <div class="form-fields">
               <%= f.text_field :date, :placeholder => t('donation.pick_date'), :class => "donation-date field-text", :data => {:behaviour => "datepicker"} %>
@@ -70,16 +69,16 @@
 
           <div class="form-group justify-item">
             <div class="form-label uppercase">
-              <%= f.label(:quantity_privacy, t('donation.private'), :title => t('donations.form.quantity_privacy_hint'), :class => 'tipsit') %> 
+              <%= f.label(:quantity_privacy, t('donation.private'), :title => t('donations.form.quantity_privacy_hint'), :class => 'tipsit') %>
             </div>
             <div class="form-fields solid">
               <%= f.check_box :quantity_privacy %>
-              <%= f.label(:quantity_privacy, 'Yes') %> 
+              <%= f.label(:quantity_privacy, 'Yes') %>
             </div>
           </div>
 
         </div>
-        
+
         <div class="js-details donation-details mt2 justify-item hundred percent">
           <%= f.fields_for(:project) do |project_form| %>
             <%= project_form.text_area :description, :placeholder => t('donation.description'), :class => "field-textarea hundred percent mb2" %>
@@ -91,6 +90,7 @@
 
     </div>
 
+    <% # Temporary disabled %>
     <% if false && !new_donation? %>
       <div id="add-donation" class="js-add-donation s11 mb3">
         <a href="#"><%= I18n.t('donation.add') %></a>
@@ -104,6 +104,7 @@
   <% end %>
 
   <%= f.submit(donation_form_button_text, class: 'big mb4' ) %>
+
   <% if editing_donation? %>
     <%= link_to(t('.cancel'), @donation) %>
   <% end %>
