Fix donations in projects pages

--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(donation_for_form, url: (@project ? project_donations_path(@project) : donations_path)) do |f| %>
+<%= form_for(donation_for_form) do |f| %>
 
   <div class="bb-donations" data-projects="<%= projects_path %>">
     <div class="js-donations mb1">
@@ -12,10 +12,10 @@
                   <%= project_form.label(:name, I18n.t('donation.project')) %>
                 </div>
                 <div class="form-fields">
-                  <% if new_donation? %>
-                    <%= project_form.text_field :name, :class => "hundred percent js-select2" %>
-                  <% else %>
+                  <% if @project %>
                     <%= project_form.text_field :name, :class => "hundred percent field-text", :disabled => true %>
+                  <% else %>
+                    <%= project_form.text_field :name, :class => "hundred percent js-select2" %>
                   <% end %>
                 </div>
               <% end %>
@@ -41,7 +41,7 @@
             </div>
             <div class="form-fields">
               <div class="field-select field-group-item">
-                <select class="js-donation-reurring" name="donation[recurring]" value="<%= f.object.recurring %>">
+                <select class="js-donation-reurring" name="donation[recurring]" value="<%= f.object.recurring %>" id="donation_recurring">
                   <option value="no" selected="selected">No</option>
                   <option value="daily"><%= t('.daily') %></option>
                   <option value="weekly"><%= t('.weekly') %></option>
@@ -76,7 +76,6 @@
               <%= f.label(:quantity_privacy, 'Yes') %>
             </div>
           </div>
-
         </div>
 
         <div class="js-details donation-details mt2 justify-item hundred percent">
